2006-12-11  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* plugins/VideoForLinuxPlugin/palettes.c: Add YUYV format
	conversion.

	* plugins/VideoForLinuxPlugin/acinclude.m4: Include stdlib before
	videodev to work around GNU/Linux header bug.

2006-12-04  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* plugins/UnixOSProcessPlugin/acinclude.m4: Require pthreads.

2006-12-01  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* plugins/VideoForLinuxPlugin: update palette.c, videolib.[ch].

2006-11-30  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* config/configure.ac: Version is 3.9-10.

	* config/configure.ac (ext_plugins): add VideoForLinuxPlugin.

	* plugins/VideoForLinuxPlugin: Added.

	* vm-sound-ALSA/sqUnixSoundALSA.c: Save and restore SIGIO
	handler (since ALSA doesn't bother to restore it correctly).

	* vm/sqGnu.h: Don't assign register vars on Darwin-i386.

2006-10-13  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* vm-sound-ALSA/sqUnixSoundALSA.c: Prepare output_handle after
	snd_pcm_avail_update failure.

	* vm-display-Quartz/sqUnixQuartz.m: Disable spin lock on non-PPC
	arch.

2006-10-10  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* vm/sqUnixMain.c: Linux sounds defaults to ALSA.

	* vm/sqUnixCharConv.c: Solaris uses "iso5" external charset.

	* vm-sound-ALSA/sqUnixSoundALSA.c: Implement mixer functions.

	* vm/sqUnixMain.c: -nomixer is no longer deprecated.

	* vm/sqUnixMain.c: PATH_MAX -> MAXPATHLEN.

	* vm/aio.c: If O_ASYNC missing try on FASYNC followed by FIOASYNC.

2006-09-21  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* vm-sound-ALSA/sqUnixSoundALSA.c (sound_Start): EPIPE is not a
	fatal error suring sound startup.

2006-09-19  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* plugins/SecurityPlugin/sqUnixSecurity.c (ioInitSecurity): Set
	secure directory from SQUEAK_SECUREDIR if set, otherwise
	implicitly from image path.
