@@ -1,5 +1,8 @@
 2006-12-11  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>
 
+	* vm-sound-ALSA/sqUnixSoundALSA.c: Attempt to reduce output
+	latency by searching on buffer size that just avoids underrun.
+
 	* plugins/VideoForLinuxPlugin/palettes.c: Add YUYV format
 	conversion.
 
